# eredes-scraper

./: .dockerignore  .gitignore  .mega-linter.yml  CHANGELOG.md  Dockerfile  LICENSE  README.md  config.yml  create-tables.sql  latest.dockerfile  pyproject.toml  requirements.txt
.github/workflows/: build-and-publish-pypi.yml  codacy-sec.yml  mega-linter.yml  pypi-publish.bak  pypi-publish.yml  pytest.yml  python-publish.yml
EredesScraper/: __init__.py  _version.py  agent.py  cli.py  db_clients.py  run.py  utils.py  workflows.py
eredesscraper/: __init__.py  _version.py  agent.py  api.py  backend.py  cli.py  config_schema.yml  db_clients.py  ddb_init.sql  logger.py  meta.py  models.py  openapi.json  server.py  utils.py  workflows.py
schemas/: openapi.json
scripts/: entrypoint.sh
src/EredesScraper/: __init__.py  _version.py  db_clients.py  eredes_agent.py  eredes_cpe_history.py  eredes_scraper.py  eredes_selenium_tests.ipynb  eredes_webdriver.py  parse_config.py  run.py  utils.py
tests/: conftest.py  example.xlsx  test_utils.py
